--- a/settings.json
+++ b/settings.json
@@ -7,14 +7,14 @@
 	"cr": "Queen Alexa",
 	"yt":"https://youtube.com/",
 	"grub":"https://chat.whatsapp.com/",
-	"wa": "wa.me/+94767043432",
-	"donate": "94767043432",
+	"wa": "wa.me/+94789580273",
+	"donate": "94789580273",
 	"ig": "https://instagram.com/HYPER_MOD",
 	"gt": "https://github.com/HYPER-MOD",
 	"ownername": "© Pavindu Dulshan Bhashitha",
-	"botname":"「 Queen Alexa 」",
+	"botname":"「 QUEEN UH bot 」",
 	"img":"https://k.top4top.io/p_2001zgi471.jpg",
 	"thumb":"thumbnail.jpg",
 	"fakethumb":"fake.jpg",
-	"fake": " 「 queen Alexa 」\n© HYPER-MOD"
+	"fake": " 「 QUEEN UH 」\n© Pavindu "
 }
